Added new library

--- a/Google-Apps-Script-Library-Database.json
+++ b/Google-Apps-Script-Library-Database.json
@@ -5,7 +5,7 @@
     "siteUrl": "https://github.com/tanaikech/BatchRequest",
     "publishedDate": 1525243965,
     "authors": [
-      "tanaike"
+      "tanaikech"
     ],
     "tags": [
       "google-apps-script",
@@ -21,7 +21,7 @@
     "siteUrl": "https://github.com/tanaikech/FilesApp",
     "publishedDate": 1529025576,
     "authors": [
-      "tanaike"
+      "tanaikech"
     ],
     "tags": [
       "google-apps-script",
@@ -38,7 +38,7 @@
     "siteUrl": "https://github.com/tanaikech/ImgApp",
     "publishedDate": 1498547968,
     "authors": [
-      "tanaike"
+      "tanaikech"
     ],
     "tags": [
       "google-apps-script",
@@ -55,7 +55,7 @@
     "siteUrl": "https://github.com/tanaikech/ManifestsApp",
     "publishedDate": 1510191360,
     "authors": [
-      "tanaike"
+      "tanaikech"
     ],
     "tags": [
       "google-apps-script",
@@ -72,7 +72,7 @@
     "siteUrl": "https://github.com/tanaikech/ProjectApp",
     "publishedDate": 1510107186,
     "authors": [
-      "tanaike"
+      "tanaikech"
     ],
     "tags": [
       "google-apps-script",
@@ -88,7 +88,7 @@
     "siteUrl": "https://github.com/tanaikech/ProjectApp2",
     "publishedDate": 1517194196,
     "authors": [
-      "tanaike"
+      "tanaikech"
     ],
     "tags": [
       "google-apps-script",
@@ -104,7 +104,7 @@
     "siteUrl": "https://github.com/tanaikech/OnedriveApp",
     "publishedDate": 1502846660,
     "authors": [
-      "tanaike"
+      "tanaikech"
     ],
     "tags": [
       "google-apps-script",
@@ -121,7 +121,7 @@
     "siteUrl": "https://github.com/tanaikech/RunAll",
     "publishedDate": 1524526481,
     "authors": [
-      "tanaike"
+      "tanaikech"
     ],
     "tags": [
       "google-apps-script",
@@ -139,7 +139,7 @@
     "siteUrl": "https://github.com/tanaikech/SOUWA_GAS",
     "publishedDate": 1476404481,
     "authors": [
-      "tanaike"
+      "tanaikech"
     ],
     "tags": [
       "google-apps-script",
@@ -156,7 +156,7 @@
     "siteUrl": "https://github.com/tanaikech/ZipFolder",
     "publishedDate": 1510469353,
     "authors": [
-      "tanaike"
+      "tanaikech"
     ],
     "tags": [
       "google-apps-script",
@@ -172,7 +172,7 @@
     "siteUrl": "https://github.com/tanaikech/RangeListApp",
     "publishedDate": 1532667376,
     "authors": [
-      "tanaike"
+      "tanaikech"
     ],
     "tags": [
       "google-apps-script",
@@ -190,7 +190,7 @@
     "siteUrl": "https://github.com/tanaikech/DownloadLargeFilesByUrl",
     "publishedDate": 1535853811,
     "authors": [
-      "tanaike"
+      "tanaikech"
     ],
     "tags": [
       "google-apps-script",
@@ -207,7 +207,7 @@
     "siteUrl": "https://github.com/tanaikech/ArrangeStackingOrder",
     "publishedDate": 1539129475,
     "authors": [
-      "tanaike"
+      "tanaikech"
     ],
     "tags": [
       "google-apps-script",
@@ -224,7 +224,7 @@
     "siteUrl": "https://github.com/tanaikech/ProcessApp",
     "publishedDate": 1549696239,
     "authors": [
-      "tanaike"
+      "tanaikech"
     ],
     "tags": [
       "google-apps-script",
@@ -240,7 +240,7 @@
     "siteUrl": "https://github.com/tanaikech/GistChecker",
     "publishedDate": 1554081939,
     "authors": [
-      "tanaike"
+      "tanaikech"
     ],
     "tags": [
       "google-apps-script",
@@ -259,7 +259,7 @@
     "siteUrl": "https://github.com/tanaikech/FetchApp",
     "publishedDate": 1555725685,
     "authors": [
-      "tanaike"
+      "tanaikech"
     ],
     "tags": [
       "google-apps-script",
@@ -277,7 +277,7 @@
     "siteUrl": "https://github.com/tanaikech/GetEditType",
     "publishedDate": 1560151001,
     "authors": [
-      "tanaike"
+      "tanaikech"
     ],
     "tags": [
       "google-apps-script",
@@ -296,7 +296,7 @@
     "siteUrl": "https://github.com/tanaikech/UnzipGs",
     "publishedDate": 1564115943,
     "authors": [
-      "tanaike"
+      "tanaikech"
     ],
     "tags": [
       "google-apps-script",
@@ -312,7 +312,7 @@
     "siteUrl": "https://github.com/tanaikech/GmailToList",
     "publishedDate": 1576479482,
     "authors": [
-      "tanaike"
+      "tanaikech"
     ],
     "tags": [
       "google-apps-script",
@@ -330,7 +330,7 @@
     "siteUrl": "https://github.com/tanaikech/EncodeApp",
     "publishedDate": 1579851888,
     "authors": [
-      "tanaike"
+      "tanaikech"
     ],
     "tags": [
       "google-apps-script",
@@ -348,7 +348,7 @@
     "siteUrl": "https://github.com/tanaikech/DateFinder",
     "publishedDate": 1580358901,
     "authors": [
-      "tanaike"
+      "tanaikech"
     ],
     "tags": [
       "google-apps-script",
@@ -366,7 +366,7 @@
     "siteUrl": "https://github.com/tanaikech/RichTextApp",
     "publishedDate": 1582088425,
     "authors": [
-      "tanaike"
+      "tanaikech"
     ],
     "tags": [
       "google-apps-script",
@@ -384,7 +384,7 @@
     "siteUrl": "https://github.com/tanaikech/GPhotoApp",
     "publishedDate": 1582676588,
     "authors": [
-      "tanaike"
+      "tanaikech"
     ],
     "tags": [
       "google-apps-script",
@@ -395,5 +395,22 @@
       "google-photos-api"
     ],
     "projectKey": "1lGrUiaweQjQwVV_QwWuJDJVbCuY2T0BfVphw6VmT85s9LJFntav1wzs9"
+  },
+  {
+    "libraryName": "CopyFolder",
+    "description": "This is Google Apps Script library for copying folder on Google Drive.",
+    "siteUrl": "https://github.com/tanaikech/CopyFolder",
+    "publishedDate": 1590447021,
+    "authors": [
+      "tanaikech"
+    ],
+    "tags": [
+      "google-apps-script",
+      "library",
+      "developer-tools",
+      "gas-library",
+      "copy-files"
+    ],
+    "projectKey": "1LV7u9yCHVQFRvgDvbkWNZIgU5Ysjzdez7a508Nom0E4f5xzkM0AURH6Y"
   }
 ]
