--- a/Google-Apps-Script-Library-Database.json
+++ b/Google-Apps-Script-Library-Database.json
@@ -731,5 +731,24 @@
       "mimetype"
     ],
     "projectKey": "112yLH6obJWYpE8RY89DTF7CLp-SEZ2tnA3pesP5Lubq-qmujLkQJao5-"
+  },
+  {
+    "libraryName": "MCPApp",
+    "description": "This text introduces the Model Context Protocol (MCP) for AI interaction, exploring Google Apps Script (GAS) as a server option. It shows feasibility with a sample but notes the lack of a GAS SDK, aiming to encourage understanding and development.",
+    "siteUrl": "https://github.com/tanaikech/MCPApp",
+    "publishedDate": 1746682372,
+    "authors": [
+      "tanaike"
+    ],
+    "tags": [
+      "gas-library",
+      "google-apps-script",
+      "google-apps-script-library",
+      "mcp",
+      "mcp-server",
+      "model-context-protocol",
+      "model-context-protocol-server"
+    ],
+    "projectKey": "1TlX_L9COAriBlAYvrMLiRFQ5WVf1n0jChB6zHamq2TNwuSbVlI5sBUzh"
   }
 ]
